# trace-trek

./: .gitignore  README.md  demo.js  opencode.json  review  synthetic_conversations.json  synthetic_conversations.json.jsonl  test.js
agent-problem-pack/: .gitignore  DESIGN.md  README.md  pyproject.toml
agent-problem-pack/problem-06-config-merge-priority/src/: config.py  loader.py
agent-problem-pack/problem-06-config-merge-priority/tests/: test_merge.py
agent-problem-pack/problem-07-thread-safe-cache/src/: cache.py
agent-problem-pack/problem-07-thread-safe-cache/tests/: test_cache.py
agent-problem-pack/problem-08-pack-lifecycle/source/: pack_tools.py
agent-problem-pack/problem-08-pack-lifecycle/tests/: test_answer.py
agent-problem-pack/problem-09-eval-pipeline-viewer/source/: EvalView.jsx  eval-results.json  eval-tasks.jsonl  eval.js
agent-problem-pack/problem-09-eval-pipeline-viewer/tests/: test_answer.py
agent-problem-pack/problem-10-flatten-depth/src/: flatten.py
agent-problem-pack/problem-10-flatten-depth/tests/: test_flatten.py
agent-problem-pack/problem-11-eval-scoring-pipeline/: conftest.py
agent-problem-pack/problem-11-eval-scoring-pipeline/tests/: test_pipeline.py
agent-problem-pack/problem-16-grounded-audit/source/: audit.py
agent-problem-pack/problem-21-js-eval-aggregate/: package.json
agent-problem-pack/problem-22-implement-jsonl-support/: conftest.py
agent-problem-pack/problem-24-implement-dry-run/: README.md
agent-problem-pack/scripts/: check_contamination.py  failure_analysis.py  golden.py  pack_tools.py  test_pack_tools.py
(+188 files in other folders)
